<resources>
    <string name="app_name">Kleo</string>
    <string name="app_name_lowercase">kleo</string>

    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>

    <string name="login_tum_email_label">TUM E-mail</string>
    <string name="login_password_label">Password</string>
    <string name="login_submit_btn">Login</string>
    <string name="login_warning_empty_email">Please type your TUM email first</string>
    <string name="login_warning_empty_password">Please type your password first</string>
    <string name="login_popup_process_label">Logging in…</string>
    <string name="login_with_tum_account_prefix">Login with</string>
    <string name="login_with_tum_account_postfix">account</string>

    <string name="main_hello_toast">Hello, %1$s!</string>

    <string name="main_menu_open_msg">Open navigation drawer</string>
    <string name="main_menu_close_msg">Close navigation drawer</string>
    <string name="main_menu_header_no_studentid">No matriculation number</string>
    <string name="main_menu_welcome">Welcome message</string>
    <string name="main_menu_group_header_student">Student</string>
    <string name="main_menu_group_header_tutor">Tutor</string>
    <string name="main_menu_group_header_superuser">Superuser</string>
    <string name="main_menu_group_advertisement_scanner">Group Scanner</string>
    <string name="main_menu_group_list">Study Groups</string>
    <string name="main_menu_user_attendance_list">My Attendances</string>
    <string name="main_menu_group_ad_broadcaster">Group Broadcaster</string>
    <string name="main_menu_attendance_blockchain">Attendance Blockchain</string>
    <string name="main_menu_user_list">User management</string>
    <string name="main_menu_logout">Logout</string>

    <string name="welcome_message"><![CDATA[Welcome to Kleo! \n Kleo is an electronic attendance system that will help you to find & sign up for interesting studying groups and tutors to record your attendances.]]></string>
    <string name="welcome_swipe_to_start_notice">Swipe on the left to get started.</string>

    <string name="group_list_item_students">Students:</string>
    <string name="group_list_item_register_switch_label">Registered</string>
    <string name="group_list_new_record_name_hint">New group name</string>
    <string name="group_list_new_record_popup_title">Create new group</string>

    <string name="group_ad_broadcast_group_chooser_label">Select group to broadcast:</string>
    <string name="group_ad_broadcaster_warning_choose_group_first_toast">Select group first</string>

    <string name="user_list_item_roles_change_popup_title">Update user roles</string>
    <string name="user_list_item_iscurrentuser_label">(you)</string>

    <string name="group_ad_scanner_toggle_notice">Click to start scanning for groups nearby:</string>
    <string name="group_ad_scanner_item_warning_attend_not_registered_toast">You must be registered first to attend this group</string>
    <string name="group_ad_scanner_item_joined_welcome_notice">Nice to have you! Your attendance has been recorded!</string>

    <string name="group_attendance_verifier_tx_time_notice">* please bear in mind, that it may take up to 5 minutes to record an attendance to the blockchain</string>
    <string name="group_attendance_verifier_explanation">To enable transparency, every attendance record in Kleo is replicated to Ethereum blockchain, so that every attendance record can be verified without relying on trust.</string>
    <string name="group_attendance_verifier_group_chooser_label">Select group:</string>
    <string name="group_attendance_verifier_session_chooser_label">Select session:</string>
    <string name="group_attendance_verifier_find_tx_btn">Find transaction</string>
    <string name="group_attendance_verifier_tx_not_found">No Record*</string>
    <string name="group_attendance_verifier_tx_found">Tx Found</string>

    <string name="resource_list_layout_no_records_found_notice">No records found</string>

    <string name="group_details_name_label">Group name:</string>
    <string name="group_details_rename_action">Rename</string>
    <string name="group_details_renaming_confirmation_toast">Group has been renamed successfully</string>
    <string name="group_details_session_label">Group session:</string>
    <string name="group_details_session_list_change_location_popup_title">Change session location</string>
    <string name="group_details_session_list_change_type_popup_title">Change session type</string>
    <string name="group_details_session_list_new_record_popup_title">Create new session</string>
    <string name="group_details_session_list_new_record_date">Date:</string>
    <string name="group_details_session_list_new_record_begins_time_label">Begins:</string>
    <string name="group_details_session_list_new_record_time_ends_label">Ends:</string>
    <string name="group_details_session_list_new_record_location_label">Location:</string>
    <string name="group_details_session_list_new_record_session_type_label">Type:</string>
    <string name="group_details_session_list_new_record_warn_start_time_blank">Please check date and start time are not blank</string>
    <string name="group_details_session_list_new_record_warn_ends_time_blank">Please check date and ends time are not blank</string>
    <string name="group_details_session_list_new_record_warn_location_blank">Please make sure session location is not blank</string>
    <string name="group_details_session_list_new_record_warn_bad_session_type_chosen">Please make sure a correct session type is chosen</string>
</resources>
